# rs-x2arrow-ipc-stream

./: Cargo.toml  README.md  build.sh  example.sh  sample.xlsx  x2arrow-ipc-stream
src/: lib.rs
