[package]
name = "rs-x2arrow-ipc-stream"
version = "0.1.0"
edition = "2024"

description = "Converts the sheet to an arrow ipc stream."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-x2arrow-ipc-stream"
homepage = "https://github.com/takanoriyanagitani/rs-x2arrow-ipc-stream"
documentation = "https://docs.rs/rs-x2arrow-ipc-stream/latest"
keywords = ["arrow", "ipc", "stream", "excel"]

exclude = [
	"x2arrow-ipc-stream",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[bin]]
name = "x2arrow-ipc-stream"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]

[dependencies.calamine]
version = "0"
default-features = true
features = ["chrono"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]
